--- a/configuration-metadata/pom.xml
+++ b/configuration-metadata/pom.xml
@@ -31,6 +31,14 @@
             <artifactId>openconfig-types</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>yang-ext</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>ietf-topology</artifactId>
+        </dependency>
     </dependencies>
 
 
