--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -16,12 +16,12 @@
     <parent>
         <groupId>io.frinx.openconfig</groupId>
         <artifactId>openconfig-parent</artifactId>
-        <version>3.1.3.rc1-frinx</version>
+        <version>3.1.3.rc2-frinx-SNAPSHOT</version>
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
     <artifactId>openconfig-platform</artifactId>
-    <version>3.1.3.rc1-frinx</version>
+    <version>3.1.3.rc2-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <dependencies>
