--- a/uniconfig-model/pom.xml
+++ b/uniconfig-model/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>io.frinx.openconfig</groupId>
   <artifactId>uniconfig-model</artifactId>
-  <version>3.1.3.rc1-frinx</version>
+  <version>3.1.3.rc2-frinx-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <dependencyManagement>
