--- a/acl/pom.xml
+++ b/acl/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>openconfig-types</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>yang-ext</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
