--- a/uniconfig-model/pom.xml
+++ b/uniconfig-model/pom.xml
@@ -12,9 +12,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.opendaylight.controller</groupId>
-    <artifactId>config-parent</artifactId>
-    <version>0.6.1-Carbon-SR1.3_1_5_rc1-frinxodl-SNAPSHOT</version>
+    <groupId>org.opendaylight.mdsal</groupId>
+    <artifactId>binding-parent</artifactId>
+    <version>0.10.1-Carbon-SR1.3_1_5_rc1-frinxodl-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -43,6 +43,14 @@
     <dependency>
       <groupId>org.opendaylight.mdsal.model</groupId>
       <artifactId>ietf-topology</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.yangtools</groupId>
+      <artifactId>concepts</artifactId>
     </dependency>
   </dependencies>
 
